--- a/index.html
+++ b/index.html
@@ -1,16 +1,74 @@
-<!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>test</title>
+<meta charset="UTF-8"> 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Program 5: CIT 140 (Select a major)</title>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
+    <!-- bootstrap on github, need to use https for these links -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+    <style> .btn{margin: 5px} </style>
 </head>
 
+
 <body>
-<h1>Hello!</h1>
-<p>My name is Natalie.</p>
+    
+<div class="container">
+<h2>Select a Major</h2>
+<div style='padding: 5px;'>
+<button type="button" class="btn btn-primary" onclick="getData('CIT')">CIT Majors</button>
+<button type="button" class="btn btn-primary" onclick="getData('Business')">Business Majors</button>
+</div>
+
+<h3>We filter our dataset by major</h3>
+<div id="majorTable">
+</div>
+</div> <!--- ending container div-->
 </body>
 
 
 
+<!-- Handlebars template -->
+<script type="text/x-handlebars-template" id="tableTemplate">
+    <table class="table table-striped">
+        <tr><th>Name</th><th>Major</th><th>Midterm</th><th>Final</th></tr>
+        {{#each rows}}
+        <tr>
+            <td>{{name}}</td><td>{{major}}</td><td>{{midterm}}</td><td>{{final}}</td>
+        </tr>
+        {{#each}}
+        </table>
+        </script>
 
+<!-- Application ajax code -->
+
+<script>
+function getData(selected_major) { // called when a major button is clicked. 
+    var request = new XMLHttpRequest();
+    request.open('GET', 'cit5students.json'); // opens ajax request for cit5students.json
+    request.onload = function() {
+        var data = JSON.parse(request.responseText); // convert json to javascript array of objects
+        
+        major_students = data.filter(getStudents) // major_students array will contain the filtered data using the getStudents() function
+        function getStudents(major) {
+            return student.major == selected_major;
+        }
+            if (request.status == 200 ) {
+                var templateText = document.getElementById('tableTemplate').innerHTML;
+            var compiledTemplateText = Handlebars.compile(templateText);       
+            compiledHtml = compiledTemplateText({ rows: students_major })          
+            document.getElementById('majorTable').innerHTML = compiledHtml; 
+            }
+            else {
+                document.querySelector('#majorTable').innerHTML = "There was an error, or students not found";
+            }
+        }
+request.send(null);
+
+}
+
+</script>
 </html>
